# cip-core

./: .gitignore  CIP_CORE_DESIGN_DOCUMENT.md  LICENSE  README.md  meta.yaml  pytest.ini  requirements.txt  setup.py
.cip/: core.yaml  instructions_v2.0.yaml  meta.yaml
cip_core/: __init__.py  meta.yaml  placeholders.py  workflows.py
cip_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  meta.yaml  requires.txt  top_level.txt
cip_core/__pycache__/: meta.yaml
cip_core/automation/: __init__.py  ai_enhanced_generator.py  coordinator.py  github_workflows.py  meta.yaml  metadata_generator.py
cip_core/cli/: __init__.py  main.py  meta.yaml
cip_core/engine/: __init__.py  config.py  core.py  meta.yaml  repository.py
cip_core/generation/: __init__.py  engine.py  meta.yaml  strategies.py
cip_core/instruction/: __init__.py  engine.py  meta.yaml
cip_core/instructions/: __init__.py  generator.py  meta.yaml
cip_core/navigation/: __init__.py  meta.yaml  resolver.py
cip_core/ollama_local/: __init__.py  client.py  meta.yaml
cip_core/schemas/: __init__.py  filename_tags.py  meta.yaml  meta_yaml.py  repository.py
cip_core/utils/: __init__.py  meta.yaml  yaml_parser.py
cip_core/validation/: __init__.py  engine.py  meta.yaml
cip_core/validators/: __init__.py  compliance.py  cross_repo.py  meta.yaml  metadata.py
cip_core/vm/: __init__.py  meta.yaml  service.py
config/: repos.example.yaml  server.example.yaml
docs/: ADOPTION_ROADMAP.md  EXAMPLES.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  WHY_CIP.md  meta.yaml
docs/architecture/: README.md  core-design.md  knowledge-graph-schema.md  meta.yaml
docs/case-studies/: README.md  meta.yaml
docs/case_studies/: meta.yaml
docs/examples/: README.md  meta.yaml
docs/gpt/: meta.yaml  prompt.txt
docs/limitations/: README.md  meta.yaml
docs/reference/: README.md  meta.yaml
docs/scripts/: README.md  initialization.md  meta.yaml
docs/technical/: README.md  meta.yaml
docs/user-guide/: README.md  meta.yaml
examples/: README.md
examples/research-amplifier/: amplifier.example.yaml  entry.example.json
kronos/: README.md  pyproject.toml
kronos/kronos/: __init__.py  embeddings.py  storage.py  types.py
kronos/kronos/graph/: __init__.py  base.py  neo4j.py  sqlite.py
kronos/kronos/vectors/: __init__.py  base.py  chromadb.py  qdrant.py
kronos/tests/: __init__.py  test_sqlite.py  test_types.py
research-amplifier/: README.md  pyproject.toml
roadmap/: README.md  cip_protocol_roadmap.md  infrastructure_tools_roadmap.md  meta.yaml  sdk_analysis_tools_roadmap.md  social_media_agent_roadmap.md
server/: README.md  STATUS.md  __init__.py  config.py  main.py  pytest.ini  requirements.txt  start.py  test_server.py
server/api/: __init__.py  generate.py  graph.py  index.py  nav.py  score.py  validate.py
server/config/: server.yaml
server/parsers/: __init__.py  base.py  markdown.py  python.py  yaml_parser.py
server/services/: __init__.py  generation.py  graph.py  indexing.py  navigation.py  scoring.py  validation.py
server/tests/: README.md  TEST_SUMMARY.md  conftest.py  test_api.py  test_config.py  test_integration.py  test_integration_cip_test_repo.py  test_parsers.py  (+4 more)
templates/: meta.yaml  vm-config.yaml
tests/: conftest.py  meta.yaml  test_automation.py  test_automation_new.py  test_basic.py  test_cli.py  test_generate_api.py  test_generation_service.py  test_schemas.py  test_validators.py
todo/: README.md  meta.yaml
(+49 files in other folders)
