[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kronos"
version = "0.1.0"
description = "Fractal Graph Memory for Repository Understanding"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dawn Field Institute"}
]
keywords = ["knowledge-graph", "embeddings", "repository", "cip"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Minimal - SQLite + ChromaDB (no Docker needed)
minimal = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
]

# Full - Neo4j + Qdrant (production)
full = [
    "neo4j>=5.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
]

# GPU acceleration
gpu = [
    "torch>=2.0.0",
]

# Development
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Repository = "https://github.com/dawn-field-institute/cip-core"

[tool.setuptools.packages.find]
where = ["."]
include = ["kronos*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
